texture config fix

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -357,7 +357,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE2
 				transform = 113
 				transform = RIGHT_PLBD_EXT
 				transform = LEFT_PLBD_EXT
@@ -370,7 +370,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_ATLANTIS_OLD
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ATLANTIS_OLD
 				transform = 113
 				transform = RIGHT_PLBD_EXT
 				transform = LEFT_PLBD_EXT
@@ -383,7 +383,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_CHALLENGER
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER
 				transform = 113
 				transform = RIGHT_PLBD_EXT
 				transform = LEFT_PLBD_EXT
@@ -396,7 +396,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_COLUMBIA
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_COLUMBIA
 				transform = 113
 				transform = RIGHT_PLBD_EXT
 				transform = LEFT_PLBD_EXT
@@ -409,7 +409,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_ENTERPRISE
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ENTERPRISE
 				transform = 113
 				transform = RIGHT_PLBD_EXT
 				transform = LEFT_PLBD_EXT
@@ -991,6 +991,767 @@
 			name = empty2
 			title = Blank A
 			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+	}
+}
+
+@PART[ShuttleOrbiter*]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
+		SUBTYPE
+		{
+			name = columbia
+			title = Columbia 1981
+			
+			addedMass = 3.116
+			CoMOffset = 0.0, -3.3, 0.0
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_COLUMBIA
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER_NRM
+				isNormalMap = true
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIA1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIA1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = challenger
+			title = Challenger 1983
+			
+			addedMass = 1.806
+			CoMOffset = 0.0, -3.15, 0.0
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_CHALLENGER
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER_NRM
+				isNormalMap = true
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCHALLENGER1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCHALLENGER1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				
+			}
+		}
+		SUBTYPE
+		{
+			name = discovery
+			title = Discovery 1984
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_DISCOVERY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ATLANTIS_OLD
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSDISCOVERY1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = atlantis
+			title = Atlantis 1985
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ATLANTIS_OLD
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = endeavour
+			title = Endeavour 1992
+			
+			addedMass = 0.395
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENDEAVOUR
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ATLANTIS_OLD
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENDEAVOUR1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = columbiaModern
+			title = Columbia Modern
+			
+			addedMass = 3.116
+			CoMOffset = 0.0, -3.3, 0.0
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA_SECOND_VERSION
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIAMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIAMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = discoveryModern
+			title = Discovery Modern
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_DISCOVERY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSDISCOVERYMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = atlantisModern
+			title = Atlantis Modern
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = endeavourModern
+			title = Endeavour Modern
+			
+			addedMass = 0.395
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENDEAVOUR
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENDEAVOURMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		
+		SUBTYPE
+		{
+			name = enterprise
+			title = Enterprise
+			
+			transform = NoseGuage
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ENTERPRISE
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER_NRM
+				isNormalMap = true
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ENTERPRISE
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER_NRM
+				isNormalMap = true
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+		}
+		
+		SUBTYPE
+		{
+			name = enterprise orbital
+			title = Enterprise Orbital
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE_ORBITAL
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_CHALLENGER_NRM
+				isNormalMap = true
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISEORBITAL
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISEORBITAL
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		
+		SUBTYPE
+		{
+			name = empty
+			title = Blank A
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_EMPTY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = empty2
+			title = Blank B
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_EMPTY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
