--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -190,6 +190,39 @@
 	
 }
 
+@PART[ShuttleRudderPanel]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = true
+	
+	%rescaleFactor = 1.5625
+	
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
+	
+	!MODULE[ModuleControlSurface]{}
+	%MODULE[FARControllableSurface] {
+		%b_2 = 5.9
+		%MAC = 1.45
+		%TaperRatio = 0.57
+		%MidChordSweep = -4.6
+		%nonSideAttach = 1
+		%maxdeflect = 20
+		%pitchaxis = 0
+		%yawaxis = 100
+		%rollaxis = 0
+		%isSpoiler = True
+		%maxdeflectFlap = -44
+		%ctrlSurfFrac = 1
+		%transformName = panel
+		%massOverride = 0
+	}
+	
+}
+
 @PART[BODY_FLAP_SPACE_SHUTTLE|ShuttleBodyFlap]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
