removed old parts and fixed tail node

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -1,3 +1,13 @@
+
+// https://science.ksc.nasa.gov/shuttle/technology/sts-newsref/sts-rcs.html
+// https://spaceflight.nasa.gov/shuttle/reference/shutref/orbiter/rcs/overview.html
+// https://www.alternatewars.com/BBOW/Space_Engines/Shuttle_Propulsion_1990.pdf
+// https://www.smashwords.com/extreader/read/126031/3/americas-space-shuttle-reaction-control-system-nasa-astronaut-training-manual-rcs-2102a
+// 418.6 kg MMH (475.76 L) and 664 kg (461.1 L) NTO RCS propellant
+// RCS ISP taken from generic config
+// Primary RCS thrust : 3.87 kN (870 lbf)
+// Vernier RCS thrust : 0.11 kN (24 lbf)
+
 @PART[ShuttleOrbiter*]:FOR[RealismOverhaul]
 {
 
@@ -461,12 +471,6 @@
             FlowMode = STAGE_PRIORITY_FLOW
         }
     }
-}
-
-
-@PART[ShuttleOrbiterTailBasicCabin]:FOR[RealismOverhaul]
-{
-	
 }
 
 //Cockpit internal configuration
