--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -1,47 +1,4 @@
-@PART[WL_SHUTTLE|WR_SHUTTLE|ShuttleWingL|ShuttleWingR|ShuttleWingLEarly|ShuttleWingREarly]:FOR[RealismOverhaul]
-{
-	%RSSROConfig = true
-	
-	%CoMOffset = 0, -4.0, 0		//Align CoM with base of landing gear hinge and kink in wing leading edge
-	@mass = 5.3
-	
-	@maxTemp = 773
-	%skinMaxTemp = 2000
-	%heatConductivity = 0.01		//all conductivity
-	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
-	%skinSkinConductionMult = 0.1
-	%emissiveConstant = 0.95		//matte black
-	
-	%rescaleFactor = 1.5625
-	
-	@maximum_drag = 0
-	@minimum_drag = 0
-	@angularDrag = 0
-	
-	@MODULE[KSPWheelBrakes]
-	{
-		@maxBrakeTorque = 10
-	}
-	
-	!MODULE[ModuleLiftingSurface]{}
-	//new MAC value taken from https://archive.org/details/nasa_techdoc_19810067693
-	%MODULE[FARWingAerodynamicModel]
-	{
-		%MAC = 12.06	//8.62
-		%MidChordSweep = 33.6
-		%b_2 = 8.95	
-		%TaperRatio = 0.185
-		%rootMidChordOffsetFromOrig = 0, -0.5, 0
-		%massOverride = 0
-	}
-}
-@PART[WR_SHUTTLE|ShuttleWingR|ShuttleWingREarly]:FOR[RealismOverhaul]
-{
-	@MODULE[FARWingAerodynamicModel]
-	{
-		@rootMidChordOffsetFromOrig[0] = 6.91
-	}
-}
+
 @PART[EVELON_L_SHUTTLE|EVELON_R_SHUTTLE|ShuttleElevonL|ShuttleElevonR]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
@@ -93,6 +50,7 @@
 	
 	@node_stack_side = -2.75, -3.7, 0.0, 0.8434, 0.5373, 0.0, 1
 	@node_attach = 2.55, 0.0, 0.0, 1.0, 0.0, 0.0
+	@node_stack_Tail = 2.47, 1.51, 0.0, 1.0, 0.0150, -0.0, 1
 
 	%RSSROConfig = true
 	
