--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -81,7 +81,43 @@
 	}
 }
 
-@PART[Shuttle_Tail|ShuttleTail]:FOR[RealismOverhaul]
+@PART[ShuttleTailRudder]:FOR[RealismOverhaul]
+{
+	
+	@node_attach = 2.55, 0.0, 0.0, 1.0, 0.0, 0.0
+	@node_stack_Tail = 2.47, 1.51, 0.0, 1.0, 0.0150, -0.0, 1
+
+	%RSSROConfig = true
+	
+	@mass += 0.1
+	
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
+	
+	%rescaleFactor = 1.5625
+	
+	@maximum_drag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
+	
+	!MODULE[ModuleLiftingSurface]{}
+	%MODULE[FARWingAerodynamicModel]
+	{
+		%MAC = 2.9
+		%MidChordSweep = 38.36
+		%b_2 = 7.7
+		%TaperRatio = 0.42
+		%rootMidChordOffsetFromOrig = 0, 0, 0
+		%massOverride = 0
+	}
+}
+
+
+@PART[Shuttle_Tail|ShuttleTail|ShuttleTailRudder]:FOR[RealismOverhaul]
 {
 	!MODULE[ModuleParachute]{}
 	MODULE
