texture switch for tail rudder

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -179,7 +179,7 @@
 	}
 }
 
-@PART[ShuttleTail]
+@PART[ShuttleTail|ShuttleTailRudder]
 {
 	!MODULE[ModuleB9PartSwitch]
 	MODULE
@@ -265,16 +265,6 @@
 		SUBTYPE
 		{
 			name = Type1
-			title = Thermal Blanket
-			
-			TEXTURE
-			{
-				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
-			}
-		}
-		SUBTYPE
-		{
-			name = Type2
 			title = Thermal Tiles
 			
 			TEXTURE
@@ -282,6 +272,17 @@
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
 			}
 		}
+		SUBTYPE
+		{
+			name = Type2
+			title = Thermal Blanket
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+			}
+		}
+		
 	}
 }
 
