fixes to tail rudder cfg

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -114,6 +114,13 @@
 		%rootMidChordOffsetFromOrig = 0, 0, 0
 		%massOverride = 0
 	}
+	
+	#ctr surface range adjusted to ensure that the patch works
+	@MODULE[ModuleControlSurface],*
+	{
+		%ctrlSurfaceRange=59
+		%ctrlSurfaceArea=1
+	}
 }
 
 
