fixes to internals, still broken

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -474,7 +474,7 @@
 }
 
 //Cockpit internal configuration
-@INTERNAL[ShuttleOrbiter*]:FOR[RealismOverhaul]
+@INTERNAL[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]
 {
 	%scaleAll = 1.5625, 1.5625, 1.5625
 	
@@ -485,3 +485,5 @@
 		%kerbalEyeOffset = 0.0, 0.0, 0.0
 	}
 }
+
+
