cl and tail rudder changes

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailRudder.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailRudder.cfg
@@ -76,7 +76,8 @@ MODULE
 		useInternalDragModel = True
 		dragCoeff = 1
 		deflectionLiftCoeff = 0.6
-		ctrlSurfaceRange = 35
+		ctrlSurfaceRange = 50
+		authorityLimiter = 54
 		ctrlSurfaceArea = 0.4
 		actuatorSpeed = 40
 		transformName = leftPanel
@@ -91,7 +92,8 @@ MODULE
 		useInternalDragModel = True
 		dragCoeff = 1
 		deflectionLiftCoeff = 0.6
-		ctrlSurfaceRange = 35
+		ctrlSurfaceRange = 50
+		authorityLimiter = 54
 		ctrlSurfaceArea = 0.4
 		actuatorSpeed = 40
 		transformName = rightPanel
