--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -115,11 +115,12 @@
 		%massOverride = 0
 	}
 	
-	#ctr surface range adjusted to ensure that the patch works
+	#ctr surface range adjustments to ensure that the patch works
 	@MODULE[ModuleControlSurface],*
 	{
-		%ctrlSurfaceRange=59
-		%ctrlSurfaceArea=1
+		%ctrlSurfaceRange=55
+		%authorityLimiter = 50
+		%ctrlSurfaceArea=1.2
 	}
 }
 
