mega texture overhaul

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -275,6 +275,16 @@
 		SUBTYPE
 		{
 			name = Type2
+			title = Thermal Tiles (Dirty)
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
+			}
+		}
+		SUBTYPE
+		{
+			name = Type3
 			title = Thermal Blanket
 			
 			TEXTURE
@@ -306,6 +316,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -371,6 +388,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_CHALLENGER
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_CHALLENGER_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -447,7 +471,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD2
+				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD_VERSION_WHITE
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -488,7 +512,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ATLANTIS
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -501,7 +525,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD2
+				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD_VERSION_WHITE
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -557,7 +581,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD2
+				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD_VERSION_WHITE
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -614,7 +638,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT
+				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_COLUMBIA_NEW
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -709,7 +733,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ATLANTIS
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -823,6 +847,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -969,6 +1000,18 @@
 			}
 			TEXTURE
 			{
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -1011,7 +1054,14 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD2
+				texture = SPACE_SHUTTLE_SYSTEM/CargoBay/FUSELASE_ATLANTIS_OLD
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/EngMount/ENGINE_MOUT_OLD_VERSION_WHITE
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
