--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -271,6 +271,11 @@
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
+				isNormalMap = true
+			}
 		}
 		SUBTYPE
 		{
@@ -281,6 +286,11 @@
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
+				isNormalMap = true
+			}
 		}
 		SUBTYPE
 		{
@@ -290,6 +300,11 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
 			}
 		}
 		
