--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -25,7 +25,7 @@
 		%TaperRatio = 0.52
 		%MidChordSweep = 5.37
 		%nonSideAttach = 1
-		%maxdeflect = 15
+		%maxdeflect = 20
 		%pitchaxis = 100
 		%yawaxis = 0
 		%rollaxis = 50
@@ -81,49 +81,6 @@
 	}
 }
 
-@PART[ShuttleTailRudder]:FOR[RealismOverhaul]
-{
-	
-	@node_attach = 2.55, 0.0, 0.0, 1.0, 0.0, 0.0
-	@node_stack_Tail = 2.47, 1.51, 0.0, 1.0, 0.0150, -0.0, 1
-
-	%RSSROConfig = true
-	
-	@mass += 0.1
-	
-	@maxTemp = 773
-	%skinMaxTemp = 2000
-	%heatConductivity = 0.01		//all conductivity
-	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
-	%skinSkinConductionMult = 0.1
-	%emissiveConstant = 0.95		//matte black
-	
-	%rescaleFactor = 1.5625
-	
-	@maximum_drag = 0
-	@minimum_drag = 0
-	@angularDrag = 0
-	
-	!MODULE[ModuleLiftingSurface]{}
-	%MODULE[FARWingAerodynamicModel]
-	{
-		%MAC = 2.9
-		%MidChordSweep = 38.36
-		%b_2 = 7.7
-		%TaperRatio = 0.42
-		%rootMidChordOffsetFromOrig = 0, 0, 0
-		%massOverride = 0
-	}
-	
-	#ctr surface range adjustments to ensure that the patch works
-	@MODULE[ModuleControlSurface],*
-	{
-		%ctrlSurfaceRange=55
-		%authorityLimiter = 50
-		%ctrlSurfaceArea=1.2
-	}
-}
-
 
 @PART[Shuttle_Tail|ShuttleTail|ShuttleTailRudder]:FOR[RealismOverhaul]
 {
@@ -173,21 +130,12 @@
 	%skinSkinConductionMult = 0.1
 	%emissiveConstant = 0.95		//matte black
 	
-	!MODULE[ModuleControlSurface]{}
-	%MODULE[FARControllableSurface] {
-		%b_2 = 5.9
-		%MAC = 1.45
-		%TaperRatio = 0.57
-		%MidChordSweep = -4.6
-		%nonSideAttach = 1
-		%maxdeflect = 20
-		%pitchaxis = 0
-		%yawaxis = 100
-		%rollaxis = 0
-		%pitchaxisDueToAoA = 50
-		%ctrlSurfFrac = 1
-		%transformName = 1
-		%massOverride = 0
+	@MODULE[ModuleControlSurface],*
+	{
+		%ctrlSurfaceRange=45
+		%authorityLimiter = 40
+		%actuatorSpeed = 80
+		#%ctrlSurfaceArea=1.2
 	}
 	
 }
@@ -250,14 +198,14 @@
 		%MidChordSweep = 0
 		%nonSideAttach = 1
 		%maxdeflect = 15
-		%pitchaxis = 0
+		%pitchaxis = 100
 		%yawaxis = 0
 		%rollaxis = 0
 		%pitchaxisDueToAoA = 50
-		isFlap = True
-		isSpoiler = False
+		isFlap = False
+		isSpoiler = True
 		flapDeflectionLevel = 0
-		maxdeflectFlap = 15
+		maxdeflectFlap = -9
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%massOverride = 0
