--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
@@ -139,6 +139,99 @@
     }
 }
 
+//Nicked from the Kerbalism configs
+
+//Shuttle
+//Add fuel cells for Mk3 in another patch below since SOCK places the fuel cells in another part
+@PART[ShuttleOrbiter*]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
+{
+  %capsuleScrubbers = true
+  %scrubberCapacity = 1.67
+  %capsuleOrigin = US
+
+  MODULE
+  {
+    name = ProcessController
+    resource = _PressureControl
+    title = N2 Pressure Controller
+    desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+    capacity = 1.67
+    toggle = true
+    running = true
+  }
+
+  MODULE
+  {
+    name = ProcessController
+    resource = _AirPump
+    title = Air Pump
+    capacity = 1.2
+    running = true
+  }
+
+  MODULE
+  {
+    name = ProcessController
+    resource = _LOXConverter
+    title = LOX to GOX Converter
+    capacity = 0.6
+    running = true
+  }
+
+  @MODULE[ProcessController],*
+  {
+    @capacity *= #$/CrewCapacity$
+  }
+
+  processConfigureExclude = true
+  MODULE
+  {
+    name = Configure
+    title = Processes
+    slots = 3
+
+    SETUP
+    {
+      name = Air Pump
+      desc = Pumps external atmosphere into the cabin to maintan internal pressure. Only works in breathable atmospheres
+      tech = crewSurvivability
+
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _AirPump
+      }
+    }
+    SETUP
+    {
+      name = N2 Pressure Control
+      desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+      tech = earlyLifeSupport
+
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _PressureControl
+      }
+    }
+    SETUP
+    {
+      name = LOX to GOX Converter
+      desc = Heats <b>LqdOxygen</b> to breathable <b>Oxygen</b>.
+      tech = earlyLifeSupport
+
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _LOXConverter
+      }
+    }
+  }
+}
+
 //Life support for STS-78 (7 crew for 16d 21h)
 @PART[ShuttleOrbiter*]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
