still issues with Kerbalism fuel cells

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
@@ -142,100 +142,16 @@
 //Nicked from the Kerbalism configs
 
 //Shuttle
-//Add fuel cells for Mk3 in another patch below since SOCK places the fuel cells in another part
+//At most 5 pairs of tanks, each holding 92 lbs LH2 and 781 lbs LOX. LOX was also for crew
+//https://science.ksc.nasa.gov/shuttle/technology/sts-newsref/sts-eps.html
+//Quote: The three fuel cells are capable of a maximum continuous output of 21,000 watts with 15-minute peaks of 36,000 watts.
 @PART[ShuttleOrbiter*]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
   %capsuleScrubbers = true
   %scrubberCapacity = 1.67
   %capsuleOrigin = US
-
-  MODULE
-  {
-    name = ProcessController
-    resource = _PressureControl
-    title = N2 Pressure Controller
-    desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
-    capacity = 1.67
-    toggle = true
-    running = true
-  }
-
-  MODULE
-  {
-    name = ProcessController
-    resource = _AirPump
-    title = Air Pump
-    capacity = 1.2
-    running = true
-  }
-
-  MODULE
-  {
-    name = ProcessController
-    resource = _LOXConverter
-    title = LOX to GOX Converter
-    capacity = 0.6
-    running = true
-  }
-
-  @MODULE[ProcessController],*
-  {
-    @capacity *= #$/CrewCapacity$
-  }
-
-  processConfigureExclude = true
-  MODULE
-  {
-    name = Configure
-    title = Processes
-    slots = 3
-
-    SETUP
-    {
-      name = Air Pump
-      desc = Pumps external atmosphere into the cabin to maintan internal pressure. Only works in breathable atmospheres
-      tech = crewSurvivability
-
-      MODULE
-      {
-        type = ProcessController
-        id_field = resource
-        id_value = _AirPump
-      }
-    }
-    SETUP
-    {
-      name = N2 Pressure Control
-      desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
-      tech = earlyLifeSupport
-
-      MODULE
-      {
-        type = ProcessController
-        id_field = resource
-        id_value = _PressureControl
-      }
-    }
-    SETUP
-    {
-      name = LOX to GOX Converter
-      desc = Heats <b>LqdOxygen</b> to breathable <b>Oxygen</b>.
-      tech = earlyLifeSupport
-
-      MODULE
-      {
-        type = ProcessController
-        id_field = resource
-        id_value = _LOXConverter
-      }
-    }
-  }
-}
-
-//Life support for STS-78 (7 crew for 16d 21h)
-@PART[ShuttleOrbiter*]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
-{
-	@description ^= :$: Supports a crew of 7 for 17 days.:
+  
+  @description ^= :$: Supports a crew of 7 for 17 days.:
 
 	@MODULE[ModuleCommand]
 	{
@@ -248,6 +164,24 @@
 	@MODULE[ModuleFuelTanks]
 	{
 
+		@volume = 8495
+		!TANK[LqdHydrogen] {}
+		!TANK[LqdOxygen] {}
+		!TANK[Hydrazine] {}
+		TANK
+		{
+			//208.65249 kg with 5 tanks, does not match in game consumption, rescale by 17/9
+			name = LqdHydrogen
+			amount = 5563
+			maxAmount = 5563
+		}
+		TANK
+		{
+			//1771.2782 kg with 5 tanks, does not match in game consumption, rescale by 17/9
+			name = LqdOxygen
+			amount = 2932
+			maxAmount = 2932
+		}
 		TANK
 		{
 			name = Food
@@ -294,25 +228,49 @@
 			maxAmount = 293
 		}
 	}
-}
-
-//Replace the stock fuel cells with Kerbalism versions and remove the APU
-//https://science.ksc.nasa.gov/shuttle/technology/sts-newsref/sts-eps.html
-//Quote: The three fuel cells are capable of a maximum continuous output of 21,000 watts with 15-minute peaks of 36,000 watts.
-@PART[ShuttleOrbiter*]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
-{
-	//Disable resource draw from the rest of the orbiter to avoid hydrolox being consumed by engines, Fuel cells can still access it
-	%NoCrossFeedNodeKey = node_stack_top
-
+	
 	!MODULE[ModuleResourceConverter],* {}
 
 	MODULE
 	{
 		name = ProcessController
-		resource = _FuelCellShuttle
-		title = Fuel Cell
-		capacity = 21 //Max continuous output
+		resource = _PressureControl
+		title = N2 Pressure Controller
+		desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+		capacity = 1.67
 		running = true
+	}
+
+	MODULE
+	{
+		name = ProcessController
+		resource = _AirPump
+		title = Air Pump
+		capacity = 1.2
+		running = true
+	}
+
+	MODULE
+	{
+		name = ProcessController
+		resource = _LOXConverter
+		title = LOX to GOX Converter
+		capacity = 0.6
+		running = true
+	}
+	
+	MODULE
+	{
+		name = ProcessController
+		resource = _FuelCell
+		title = Fuel Cell
+		capacity = 21
+		running = true
+	}
+
+	@MODULE[ProcessController],*
+	{
+		@capacity *= #$/CrewCapacity$
 	}
 
 	processConfigureExclude = true
@@ -320,8 +278,47 @@
 	{
 		name = Configure
 		title = Processes
-		slots = 1
+		slots = 4
 
+		SETUP
+		{
+			name = Air Pump
+			desc = Pumps external atmosphere into the cabin to maintan internal pressure. Only works in breathable atmospheres
+			tech = crewSurvivability
+
+			MODULE
+			{
+			type = ProcessController
+			id_field = resource
+			id_value = _AirPump
+			}
+		}
+		SETUP
+		{
+			name = N2 Pressure Control
+			desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+			tech = earlyLifeSupport
+
+			MODULE
+			{
+			type = ProcessController
+			id_field = resource
+			id_value = _PressureControl
+			}
+		}
+		SETUP
+		{
+			name = LOX to GOX Converter
+			desc = Heats <b>LqdOxygen</b> to breathable <b>Oxygen</b>.
+			tech = earlyLifeSupport
+
+			MODULE
+			{
+			type = ProcessController
+			id_field = resource
+			id_value = _LOXConverter
+			}
+		}
 		SETUP
 		{
 			name = Fuel Cell
@@ -330,45 +327,12 @@
 
 			MODULE
 			{
-				type = ProcessController
-				id_field = resource
-				id_value = _FuelCellShuttle
+			type = ProcessController
+			id_field = resource
+			id_value = _FuelCell
 			}
 		}
 	}
 	
-	@MODULE[ModuleFuelTanks]
-	{
-		!TANK[Hydrazine] {}
-	}
-
 }
 
-//At most 5 pairs of tanks, each holding 92 lbs LH2 and 781 lbs LOX. LOX was also for crew
-//https://science.ksc.nasa.gov/shuttle/technology/sts-newsref/sts-eps.html
-@PART[ShuttleOrbiter*]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
-{
-	@MODULE[ModuleFuelTanks]
-	{
-		@volume = 8495
-		!TANK[Hydrogen] {}
-		!TANK[LqdHydrogen] {}
-		TANK
-		{
-			//208.65249 kg with 5 tanks, does not match in game consumption, rescale by 17/9
-			name = LqdHydrogen
-			amount = 5563
-			maxAmount = 5563
-		}
-
-		!TANK[Oxygen] {}
-		!TANK[LqdOxygen] {}
-		TANK
-		{
-			//1771.2782 kg with 5 tanks, does not match in game consumption, rescale by 17/9
-			name = LqdOxygen
-			amount = 2932
-			maxAmount = 2932
-		}
-	}
-}
