--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
@@ -262,9 +262,9 @@
 	MODULE
 	{
 		name = ProcessController
-		resource = _FuelCell
+		resource = _FuelCellShuttle
 		title = Fuel Cell
-		capacity = 21
+		capacity = 21 //Max continuous output
 		running = true
 	}
 
@@ -327,9 +327,9 @@
 
 			MODULE
 			{
-			type = ProcessController
-			id_field = resource
-			id_value = _FuelCell
+				type = ProcessController
+				id_field = resource
+				id_value = _FuelCellShuttle
 			}
 		}
 	}
