new et textures

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -1136,11 +1136,29 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ET_DETAILTEX_SLWT
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ET_DETAILTEX_LWT
 				transform = Cylinder_000
 			}
 		}
 		SUBTYPE
+		{
+			name = LWT_2
+			title = LWT Alternate
+			
+			addedMass = -4.87
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ET_LWT2
+				transform = ET_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ET_DETAILTEX_LWT
+				transform = Cylinder_000
+			}
+		}
+		SUBTYPE 
 		{
 			name = SLWT
 			title = SLWT
