new textures with alpha channels

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -646,6 +646,13 @@
 			}
 			TEXTURE
 			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_COLUMBIA_NRM
+				isNormalMap = true
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/CargoBay/FUSELASE2
 				transform = 113
 				transform = RIGHT_PLBD_EXT
@@ -867,7 +874,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_COLUMBIA_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_ENTERPRISE_NRM
 				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
@@ -932,6 +939,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_ENTERPRISE_ORBITAL
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_COLUMBIA_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
