--- a/GameData/SPACE_SHUTTLE_SYSTEM/Spaces/internalEmpty.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Spaces/internalEmpty.cfg
@@ -1,9 +1,9 @@
 INTERNAL
 {
-	name = css_cockpitEmpty
+	name = space_shuttle_system_cockpitEmpty
 	MODEL
 	{
-		model = SPACE_SHUTTLE_SYSTEM/Spaces/css_cockpit/css_cockpit
+		model = SPACE_SHUTTLE_SYSTEM/Spaces/space_shuttle_system_cockpit/space_shuttle_system_cockpit
 		position = 0.25, -1.13, 1.565
 		scale = 1.415, 1.415, 1.415
 	}
