fixed internal scaling and eye placement

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -336,16 +336,36 @@
 
 
 //Cockpit internal configuration
-@INTERNAL[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]
+@INTERNAL[space_shuttle_system_cockpit*]:FOR[RealismOverhaul]
 {
-	%scaleAll = 1.5625, 1.5625, 1.5625
+	%scaleAll = 1.56, 1.56, 1.56
 	
 	@MODULE[InternalSeat],*
 	{
-		%kerbalScale = 1.5625, 1.5625, 1.5625
+		%kerbalScale = 1.6, 1.6, 1.6
 		%kerbalOffset = 0.0, 0.0, 0.0
-		%kerbalEyeOffset = 0.0, 0.0, 0.0
+	}
+	@MODULE[InternalSeat],1
+	{
+		%kerbalEyeOffset = 0.034, -0.045, 0.0
+	}
+	@MODULE[InternalSeat],0
+	{
+		%kerbalEyeOffset = -0.034 -0.045, 0.0
+	}
+	@MODULE[InternalSeat],4
+	{
+		%kerbalEyeOffset = 0.0, 0.055, 0.0
 	}
 }
 
-
+@INTERNAL[space_shuttle_system_cockpit*]:NEEDS[Kerbalism]:FOR[RealismOverhaul]
+{
+	
+	@MODULE[InternalSeat],*
+	{
+		%kerbalScale = 1.3, 1.3, 1.3
+		%kerbalOffset = 0.0, 0.0, 0.0
+	}
+	
+}
